# coe379spring2025

./: README.md
lectures/: transpose_discussion.txt
skeletons/: build_f.sh  build_mpl.sh  jobscript
skeletons/cmake/: Makefile  build_c.sh  build_cxx.sh
skeletons/cmake/cmake_example_f08/: fprogram.F90
skeletons/cmake/cmake_example_mpl/: cxxprogram.cxx
skeletons/cmake_example_c/: CMakeLists.txt  cprogram.c
skeletons/cmake_example_cxx/: CMakeLists.txt
skeletons/cmake_example_f08/: CMakeLists.txt
skeletons/cmake_example_mpl/: CMakeLists.txt
